# snpe_inference

./: CMakeLists.txt  build_linux_exe.sh  build_qnx_exe.sh  readme.md
3thirdParty/OpenCV/Linux-x86_64/include/opencv2/: cvconfig.h
3thirdParty/OpenCV/Linux-x86_64/lib/: libopencv_world.so.3.4
3thirdParty/OpenCV/Linux-x86_64/lib/pkgconfig/: opencv.pc
3thirdParty/OpenCV/Linux-x86_64/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
3thirdParty/OpenCV/qnx-aarch64le/include/opencv2/: cvconfig.h  opencv_modules.hpp
3thirdParty/OpenCV/qnx-aarch64le/lib/: ic_dms
3thirdParty/OpenCV/qnx-aarch64le/lib/pkgconfig/: opencv.pc
3thirdParty/snpe/v1.51/Linux-x86_64/include/zdl/SNPE/: PSNPE.hpp
src/: main.cpp
src/detect/: face_landmark.cpp  face_landmark.h
src/infer/: inference_factory.cpp  inference_factory.h  nn_inference.cpp  nn_inference.h
src/infer/snpe/: snpe_infer.cpp  snpe_infer.h
src/infer/utils/: createBuffer.cpp  createBuffer.h
src/nlohmann/: json.hpp
src/snpe_infer/: snpe_infer.cpp  snpe_infer.h
src/utils/: createBuffer.cpp  createBuffer.h
